; ModuleID = '/home/carl/AnghaBench/macvim/src/extr_edit.c_ins_compl_need_restart.c'
source_filename = "/home/carl/AnghaBench/macvim/src/extr_edit.c_ins_compl_need_restart.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@compl_was_interrupted = common dso_local global i64 0, align 8
@ctrl_x_mode = common dso_local global i64 0, align 8
@CTRL_X_FUNCTION = common dso_local global i64 0, align 8
@CTRL_X_OMNI = common dso_local global i64 0, align 8
@compl_opt_refresh_always = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @ins_compl_need_restart to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ins_compl_need_restart() #0 {
  %1 = load i64, i64* @compl_was_interrupted, align 8
  %2 = icmp ne i64 %1, 0
  br i1 %2, label %16, label %3

3:                                                ; preds = %0
  %4 = load i64, i64* @ctrl_x_mode, align 8
  %5 = load i64, i64* @CTRL_X_FUNCTION, align 8
  %6 = icmp eq i64 %4, %5
  br i1 %6, label %11, label %7

7:                                                ; preds = %3
  %8 = load i64, i64* @ctrl_x_mode, align 8
  %9 = load i64, i64* @CTRL_X_OMNI, align 8
  %10 = icmp eq i64 %8, %9
  br i1 %10, label %11, label %14

11:                                               ; preds = %7, %3
  %12 = load i64, i64* @compl_opt_refresh_always, align 8
  %13 = icmp ne i64 %12, 0
  br label %14

14:                                               ; preds = %11, %7
  %15 = phi i1 [ false, %7 ], [ %13, %11 ]
  br label %16

16:                                               ; preds = %14, %0
  %17 = phi i1 [ true, %0 ], [ %15, %14 ]
  %18 = zext i1 %17 to i32
  ret i32 %18
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
